# rhc-bot

./: Cargo.toml
packaging/: rhc-bot.spec
src/: main.rs
