[package]
name = "rhc-bot"
version = "1.0.0"
edition = "2026"
license = "GPL"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["io-util", "macros", "rt-multi-thread", "process", "time"] }
